highlight if operator was click / check if values are NaN or empty

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 				<div class="input-a">
 					<p class="label">A</p>
 					<input type="number" id="a-value">
+					<p class="warning">input here!</p>
 				</div>
 				<div class="input-b">
 					<p class="label">B</p>
 					<input type="number" id="b-value">
+					<p class="warning">input here!</p>
 				</div>
 			</div>
 			<div class="operator-area">
