DONE : Load history from json file / add icon app / change screen size

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 			<div class="input-area">
 				<div class="input-a">
 					<p class="label">A</p>
-					<input type="number" id="a-value">
+					<input type="number" id="a-value" class="input-number">
 					<p class="warning">input here!</p>
 				</div>
 				<div class="input-b">
 					<p class="label">B</p>
-					<input type="number" id="b-value">
+					<input type="number" id="b-value" class="input-number">
 					<p class="warning">input here!</p>
 				</div>
 			</div>
@@ -29,11 +29,12 @@
 			</div>
 			<div class="result-area">
 				<div class="input-result">
-					<p class="label">Result</p>
-					<input type="text" id="result" disabled>
+					<p class="label"><b>Result</b></p>
+					<input type="text" id="result" class="input-number" disabled>
 				</div>
 			</div>		
 			<div class="button-area">
+				<button type="button" id="clear-btn" class="action-button">Clear</button>
 				<button type="button" id="load-btn" class="action-button">Load</button>
 				<button type="button" id="save-btn" class="action-button">Save</button>
 			</div>		
