fixed input float / can't save file if input empty

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<button type="button" id="multiply" class="operator-button">x</button>
 				<button type="button" id="divide" class="operator-button">/</button>
 				<button type="button" id="power" class="operator-button">Pow</button>
+				<p class="warning">Choose this!</p>
 			</div>
 			<div class="result-area">
 				<div class="input-result">
