(Task 2) save/load history on cloud

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
 				</div>
 			</div>		
 			<div class="button-area">
+				<p class="checkbox"><input type="checkbox" id="save-cloud-check"> Cloud Drive </p>
 				<button type="button" id="clear-btn" class="action-button">Clear</button>
 				<button type="button" id="load-btn" class="action-button">Load</button>
 				<button type="button" id="save-btn" class="action-button">Save</button>
+				<div id="loading" class="loading-area">
+					<img src="./assets/loading.gif" alt="loading" class="loading">
+					<span>Loading...</span>
+				</div>
 			</div>		
 		</div>
 		<script>window.$ = window.jQuery = require('./js/jquery.min.js');</script>
